Implémente le code minimal pour afficher un point au milieu de l'écran

--- a/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj
+++ b/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj
@@ -174,11 +174,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="GlutUtils.h" />
+    <ClInclude Include="math_3d.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="GlutUtils.cpp" />
-    <ClCompile Include="opengl-sandbox.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
