--- a/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj.filters
+++ b/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj.filters
@@ -21,15 +21,18 @@
     <ClInclude Include="GlutUtils.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="math_3d.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="opengl-sandbox.cpp">
+    <ClCompile Include="GlutUtils.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
-    <ClCompile Include="GlutUtils.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
   </ItemGroup>
