--- a/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj.filters
+++ b/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="Renderer.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="ShaderUtils.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -41,5 +44,16 @@
     <ClCompile Include="Renderer.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="ShaderUtils.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="exemple.vert">
+      <Filter>Fichiers sources</Filter>
+    </None>
+    <None Include="exemple.frag">
+      <Filter>Fichiers sources</Filter>
+    </None>
   </ItemGroup>
 </Project>
