--- a/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj
+++ b/opengl-sandbox/opengl-sandbox/opengl-sandbox.vcxproj
@@ -176,6 +176,7 @@
     <ClInclude Include="GeometryUtils.h" />
     <ClInclude Include="math_3d.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Pipeline.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="ShaderUtils.h" />
   </ItemGroup>
@@ -188,6 +189,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Pipeline.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="ShaderUtils.cpp" />
   </ItemGroup>
